--- a/css/exercise3.css
+++ b/css/exercise3.css
@@ -1,1 +1,34 @@
+body 
+{
+    background-color: lightskyblue;
+    Font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
 
+h1
+{
+    font-style: italic;
+    padding-top: 10px;
+}
+
+p
+{
+    font-size: 45px;
+}
+
+.title
+{
+    font-weight: bold;
+}
+
+#theend
+{
+    color: navy;
+}
+
+div
+{
+    padding: 50px;
+    margin: 80px;
+    border: 10px solid black;
+}
