--- a/css/animation.css
+++ b/css/animation.css
@@ -1,6 +1,6 @@
 body 
 {
-    background-color: 220;
+    background-color: #8FBC8F;
     Font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
